--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "pretty": "prettier --write ."
   },
   "dependencies": {
     "@material-ui/icons": "^4.11.3",
