--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1",
     "vite": "^2.9.15"
+  },
+  "dependencies": {
+    "@studio-freight/lenis": "^1.0.6",
+    "kursor": "^0.1.6"
   }
 }
